feat : 서버이전을 위한 엘라스틱 서치 삭제