@@ -3,10 +3,8 @@ package com.j10d207.tripeer.plan.service;
 import com.j10d207.tripeer.common.CommonMethod;
 import com.j10d207.tripeer.place.db.ContentTypeEnum;
 import com.j10d207.tripeer.place.db.entity.CityEntity;
-import com.j10d207.tripeer.place.db.entity.ElasticSpotEntity;
 import com.j10d207.tripeer.place.db.entity.TownEntity;
 import com.j10d207.tripeer.place.db.repository.CityRepository;
-import com.j10d207.tripeer.place.db.repository.ElasticSpotRepository;
 import com.j10d207.tripeer.place.db.repository.TownRepository;
 import com.j10d207.tripeer.plan.db.TimeEnum;
 import com.j10d207.tripeer.plan.dto.req.*;
@@ -72,7 +70,6 @@ public class PlanServiceImpl implements PlanService {
 
     private final SpotInfoRepository spotInfoRepository;
     private final PlanDetailRepository planDetailRepository;
-    private final ElasticSpotRepository elasticSpotRepository;
 
     private final TMapService tMapService;
 
@@ -386,27 +383,18 @@ public class PlanServiceImpl implements PlanService {
     public SpotSearchResDTO getSpotsInMap(long planId, String keyword, int page, double minLat, double maxLat,
         double minLon, double maxLon, int sortType, long userId) {
         PageRequest pageRequest = PageRequest.of(page-1, SEARCH_PER_PAGE);
-        List<Integer> contentTypeIds = ContentTypeEnum.getContentTypeIdListFromSortType(sortType);
         // 지도 영역 내의 관광지 검색
-        Page<ElasticSpotEntity> elasticSpotList;
-        if (keyword.isEmpty()) {
-            elasticSpotList = elasticSpotRepository.AllSpotsInMap(
-                minLat, maxLat, minLon, maxLon, contentTypeIds, pageRequest);
-        } else {
-            elasticSpotList = elasticSpotRepository.searchSpotsInMap(
-                minLat, maxLat, minLon, maxLon, keyword, contentTypeIds, pageRequest);
-        }
-        List<Integer> idList = elasticSpotList.stream().map(ElasticSpotEntity::getId).toList();
-        List<SpotInfoEntity> spots = spotInfoRepository.findAllWithReviewsById(idList);
+        Page<SpotInfoEntity> spots = spotInfoRepository.searchSpotsInMap(
+                minLat, maxLat, minLon, maxLon, keyword, sortType, pageRequest);
         // 위시리스트
         Set<Integer> wishSet = wishListRepository.findAllSpotInfoIdsByUserId(userId);
 
         return new SpotSearchResDTO(spots.stream()
             .map(spot -> SpotSearchResDTO.SearchResult.fromSpotInfoEntity(spot,
-                wishSet.contains(spot.getSpotInfoId()),    // 위시리스트에 있는지
+                wishSet.contains(spot.getSpotInfoId()),
                 false)  // 버킷에 있는지
             )
-            .toList(), elasticSpotList.isLast());
+            .collect(Collectors.toList()),spots.isLast());
     }
 
 
